[gd_scene load_steps=4 format=3 uid="uid://vhwegiqv4t7y"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_nxi0n"]
[ext_resource type="Texture2D" uid="uid://f5ebgsa4mrjj" path="res://icon.svg" id="2_57y55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lq4hh"]
size = Vector2(128, 128)

[node name="Card" type="Node2D"]
script = ExtResource("1_nxi0n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_57y55")

[node name="TypeLabel" type="Label" parent="."]
visible = false
text = "5
"

[node name="NumberLabel" type="Label" parent="."]
modulate = Color(1, 0.16, 0.16, 1)
text = "5
"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape3D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lq4hh")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
